fixed mobile layout issue

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -27,6 +27,7 @@ body {
     font-family: "Inter", sans-serif;
     font-weight: 400;
     background-color: var(--color-grey-900);
+    overflow: hidden;
 }
 
 p {
