--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@ main {
   place-items: center;
   padding: var(--padding) calc(var(--padding) * 2);
   height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 article {
@@ -13,7 +13,7 @@ article {
   background-color: var(--color-grey-800);
   padding: var(--article-padding);
   text-align: center;
-  /* max-width: 48rem; */
+  max-width: 48rem;
   margin-inline: auto;
   display: flex;
   flex-direction: column;
@@ -64,7 +64,7 @@ article {
 .button {
     --border-radius: 0.4rem;
     --py: 0.6rem;
-    --px: 6rem;
+    --px: 5rem;
     background-color: var(--color-grey-700);
     border-radius: var(--border-radius);
     width: 100%;
